# rbash

./: .gitattributes  .gitignore  Cargo.toml  Pipfile  README.md
.cargo-husky/hooks/: pre-push
.github/workflows/: main.yaml
lib/: Cargo.toml  build.rs
lib/cbash/: CBash.h  libboost_iostreams-vc142-mt-x64-1_71.lib  zlibstatic.lib
lib/src/: bindings.rs  collection.rs  lib.rs  modfile.rs  raw.rs  record.rs
pylib/: Cargo.toml
pylib/src/: collection.rs  enums.rs  lib.rs  modfile.rs  record.rs
